<resources>
    <string name="app_name">Shamus Presence</string>
    <string name="description"> Shamus presence est une application qui permet de marquer sa presence grâce à la détection du Wi-Fi de entreprise!</string>
    <string name="apropos">about</string>">
    <string name="daccord">OK!</string>
    <string name="logregister">not register?? you can create a compte</string>
    <string name="logbouton">login</string>
    <string name="login">login</string>
    <string name="dejacompte">you have a  compte, login</string>

    <string name="crecompte">register</string>
    <string name="compte">create a compte, register</string>
    <string name="chargement">Une gestion Moderne de la présence</string>
    <string name="equipajout">Add</string>
    <string name="mac">Adresse Mac</string>
    <string name="nomwifi">Nom du Wifi</string>
    <string name="nomu">username</string>
    <string name="email">Email</string>
    <string name="mpd">password</string>
    <string name="cmpd">Confirm  MP</string>
    <string name="ch">Change a language</string>
    <string name="f">Francais</string>
    <string name="e">Anglais</string>
    <string name="theme">Changer Vos Themes ici</string>
    <string name="blanc">Blanc</string>
    <string name="noir">Noir</string>
    <string name="nom">Nom</string>
    <string name="role">Role</string>
    <string name="telephone">Telephone</string>
    <string name="detail">Detail</string>
    <string name="credit">Cette application est développée par : Gael ANDELA</string>
    <string name="comptte">Gestion des comptes</string>
    <string name="equipement">Gestion des équipements</string>
    <string name="etats">Gestion des Etats</string>
    <string name="marquer_arrive">Marquer Arrivée</string>
    <string name="marquer_depart">Marquer Départ</string>
    <string name="wec">Bienvenue,</string>
    <string name="jourp">Mettez à Jour votre Profil ici</string>
    <string name="jour">Mettre à Jour</string>
    <string name="menu_profil">Profil</string>
    <string name="requete">Requete</string>
    <string name="Motif">Motif de la Requete</string>
    <string name="Detaile">Detail de la requete</string>
    <string name="envoyer">Envoyer</string>
    <string name="parametre">Parametre</string>
    <string name="apparameter">Parametre de l\'application</string>
    <string name="langue">Changer de Langue</string>
    <string name="session">Parametre de Session</string>
    <string name="reset">Réinitialiser votre Mot de Passe</string>
    <string name="logout">Se Deconnecter</string>
    <string name="aprpos">A Propos de cette Application</string>
    <string name="creditt">Credits</string>
    <string name="apport">A Propos de cette Apllication</string>
    <string name="arriver">Arrivée</string>
    <string name="Depart">Départ</string>
    <string name="Date">Date</string>
    <string name="nome">Nom</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="ques">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="rp">Réponse aux requêtes</string>
    <string name="re">Réinitialiser</string>
    <string name="reset_desc">Entrez votre adresse e-mail et nous vous enverrons un lien pour réinitialiser votre mot de passe.</string>
    <string name="roler">Attribuez les rôles ici</string>
    <string name="reset_password_email_sent">Un e-mail de réinitialisation a été envoyé</string>
    <string name="reset_password_failed">Échec de l\'envoi de l\'e-mail de réinitialisation</string>
    <string name="enter_email">Veuillez entrer votre adresse e-mail</string>
    <string name="please_fill_all_fields">Veuillez remplir tous les champs</string>
    <string name="passwords_do_not_match">Les mots de passe ne correspondent pas</string>
    <string name="registration_successful">Inscription réussie</string>
    <string name="database_error">Erreur de base de données : %1$s</string>
    <string name="invalid_email_format">L\'adresse e-mail est mal formatée.</string>
    <string name="email_already_in_use">L\'adresse e-mail est déjà utilisée par un autre compte.</string>
    <string name="authentication_failed">Échec de l\'authentification : %1$s</string>
    <string name="login_successful">Connexion réussie</string>
    <string name="wrong_password">Le mot de passe est incorrect.</string>
    <string name="user_not_found">Aucun utilisateur trouvé avec cet e-mail.</string>
    <string name="login_failed">Échec de la connexion : %1$s</string>
    <string name="user_clicked">Utilisateur cliqué : %1$s</string>
    <string name="error_message">Erreur : %1$s</string>
    <string name="tab_home">Accueil</string>
    <string name="tab_mes_etats">Mes États</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>