<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bordure"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Champ Nom du Wifi -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nomwifi"
            app:endIconMode="none"
            app:startIconDrawable="@drawable/baseline_info_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wifi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/whit" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Champ Mot de Passe -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/mac"
            app:endIconMode="none"
            app:startIconDrawable="@drawable/baseline_info_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mac_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/whit" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Bouton Ajouter -->
        <Button
            android:id="@+id/ajout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/bouton_back"
            android:text="@string/equipajout"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
